src/objects/FSTR__PCE_Step_Loop_Back_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>FSTR__DataType__c</fullName>
        <label>DataType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Field_Value__c</fullName>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Joining_Operator__c</fullName>
        <label>Joining Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AND</fullName>
                    <default>true</default>
                    <label>AND</label>
                </value>
                <value>
                    <fullName>OR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__Lookup_Name__c</fullName>
        <description>If criteria is a lookup criteria to another record, this field will store the name of the record looked up to while Field_value__c stores the Id.</description>
        <label>Lookup Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;</fullName>
                </value>
                <value>
                    <fullName>&lt;=</fullName>
                </value>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&gt;=</fullName>
                </value>
                <value>
                    <fullName>=</fullName>
                </value>
                <value>
                    <fullName>!=</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__PCE_Step__c</fullName>
        <label>Step</label>
        <referenceTo>FSTR__PCE_Step__c</referenceTo>
        <relationshipName>PCE_Loop_Back_Criteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Step Loop Back Criteria</label>
    <nameField>
        <displayFormat>PCELBC-{0000000}</displayFormat>
        <label>Loop Back Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Step Loop Back Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>